tests/baselines/reference/privateInterfaceProperties.errors.txt
tests/cases/compiler/privateInterfaceProperties.ts(4,7): error TS2420: Class 'c1' incorrectly implements interface 'i1'.
  Property 'name' is private in type 'c1' but not in type 'i1'.


==== tests/cases/compiler/privateInterfaceProperties.ts (1 errors) ====
    interface i1 { name:string; }
     
    // should be an error 
    class c1 implements i1 { private name:string; }
          ~~
!!! error TS2420: Class 'c1' incorrectly implements interface 'i1'.
!!! error TS2420:   Property 'name' is private in type 'c1' but not in type 'i1'.
     
    // should be ok 
    class c2 implements i1 { public name:string; }
    
     